--- a/MovieApplication/appsettings.json
+++ b/MovieApplication/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Jwt": {
+    "Key": "jwtrandomkey",
+    "Issuer": "movieapplication.com"
+  },
+  "ConnectionStrings": {
+    "Default": "server=localhost; database=MovieApplication; Integrated Security=SSPI"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
