--- a/MovieApplication/MovieApplication.csproj
+++ b/MovieApplication/MovieApplication.csproj
@@ -7,6 +7,14 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MovieApplication.Core.Data\MovieApplication.Core.Data.csproj" />
+    <ProjectReference Include="..\MovieApplication.Core\MovieApplication.Core.csproj" />
+    <ProjectReference Include="..\MovieApplication.Domain.Dto\MovieApplication.Domain.Dto.csproj" />
   </ItemGroup>
 
 </Project>
