Added authentication and movie integration service

--- a/MovieApplication/appsettings.json
+++ b/MovieApplication/appsettings.json
@@ -3,6 +3,10 @@
     "Key": "jwtrandomkey",
     "Issuer": "movieapplication.com"
   },
+  "MovieDataSource": {
+    "Default": "http://www.omdbapi.com",
+    "ApiKey": "8557e66c"
+  },
   "ConnectionStrings": {
     "Default": "server=localhost; database=MovieApplication; Integrated Security=SSPI"
   },
