--- a/MovieApplication.Domain.Mapper/MovieApplication.Domain.Mapper.csproj
+++ b/MovieApplication.Domain.Mapper/MovieApplication.Domain.Mapper.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="AutoMapper" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MovieApplication.Domain.Dto\MovieApplication.Domain.Dto.csproj" />
+  </ItemGroup>
+
 </Project>
