--- a/MovieApplication/MovieApplication.csproj
+++ b/MovieApplication/MovieApplication.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\MovieApplication.Core.Data\MovieApplication.Core.Data.csproj" />
     <ProjectReference Include="..\MovieApplication.Core\MovieApplication.Core.csproj" />
     <ProjectReference Include="..\MovieApplication.Domain.Dto\MovieApplication.Domain.Dto.csproj" />
+    <ProjectReference Include="..\MovieApplication.Domain.Mapper\MovieApplication.Domain.Mapper.csproj" />
   </ItemGroup>
 
 </Project>
