--- a/MovieApplication/appsettings.json
+++ b/MovieApplication/appsettings.json
@@ -8,7 +8,8 @@
     "ApiKey": "8557e66c"
   },
   "ConnectionStrings": {
-    "Default": "server=localhost; database=MovieApplication; Integrated Security=SSPI"
+    "Default": "server=localhost; database=MovieApplication; Integrated Security=SSPI",
+    "Redis": "MovieApplicationRedis.redis.cache.windows.net:6380,allowAdmin=True,password=x1wY8eyJJbq8l2dftIIi0+hYqrSs4ok1R8wmu9ZQf7A=,ssl=True,abortConnect=False"
   },
   "Logging": {
     "LogLevel": {
